# industrial-control-toolkit

./: .gitignore  CMakeLists.txt  KEY.gpg  README.md  install.md  requirements.txt
benchmarks/: CMakeLists.txt
benchmarks/runners/: bench_pid_vs_baseline.cc  pid_bench.csv
cmake/modules/: ICTKCompilerOptions.cmake  ICTKConfig.cmake.in  ICTKSanitizers.cmake
conf/: distributions
db/: checksums.db  contents.cache.db  packages.db  references.db  release.caches.db
dists/jammy/: InRelease  Release  Release.gpg
dists/jammy/main/binary-amd64/: Packages
dists/noble/: InRelease  Release  Release.gpg
dists/noble/main/binary-amd64/: Packages  Release
docs/Controllers/: PID.md
examples/: CMakeLists.txt  pid_cascade_speed_position.cpp  pid_position_control.cpp
examples/pid/: CMakeLists.txt  pid_cascade_speed_position.cpp  pid_position_control.cpp
examples/pid/csv/: pid_cascade_step.csv  pid_position_step.csv
examples/pid/tools/: plot_pid.py
include/ictk/: all.hpp  version.hpp  visibility.hpp
include/ictk/c_api/: ictk_c.h
include/ictk/control/pid/: imc_pid.hpp  pid.hpp
include/ictk/core/: config.hpp  controller.hpp  controller_base.hpp  expected.hpp  health.hpp  memory_arena.hpp  result.hpp  status.hpp  time.hpp  types.hpp  update_context.hpp
include/ictk/filters/: iir.hpp
include/ictk/io/: kpi.hpp  logger.hpp
include/ictk/models/: dead_time.hpp  scaling.hpp
include/ictk/safety/: anti_windup.hpp  bumpless_transfer.hpp  clip.hpp  fallback.hpp  interlocks.hpp  jerk_limit.hpp  rate_limit.hpp  saturation.hpp  watchdog.hpp
pool/main/i/ictk-dev/: ictk-dev_0.0.2_amd64.deb  ictk-dev_0.1.0_amd64.deb
src/: ictk_version.cc
src/vehicle_description/: CMakeLists.txt  package.xml
src/vehicle_description/models/vehicle/: model.sdf
src/vehicle_description/worlds/: saye_world.sdf
tests/: CMakeLists.txt  test_headers_compile.hpp
tests/property/: test_bumpless_bound.cpp  test_bumpless_placeholder  test_determinism_runner.cpp  test_fallback_ramp.cpp  test_fifo_delay_property.cpp  test_iir_determinism_property.cpp  test_jerk_lipschitz.cpp  test_rate_lipschitz.cpp  test_safety_order.cpp  test_saturation_monotonic.cpp
tests/test_pid/unit/: pid_coeffs_test.cpp
tests/tests_pid/property/: pid_aw_post_safety.cpp  pid_bumpless_property.cpp  pid_derivative_kick.cpp  pid_jerk_lipschitz_property.cpp  pid_rate_lipschitz_property.cpp  pid_scheduling_lipschitz.cpp
tests/tests_pid/unit/: imc_pid_synthesize_test.cpp  pid_aw_modes_test.cpp  pid_coeffs_test.cpp  pid_invalid_bits_test.cpp
tests/unit/: test_affine_scale.cpp  test_deadtime_peek_bounds.cpp  test_headers_compile.cpp
tests/util/: alloc_interposer.cpp  alloc_interposer.hpp  dummy_controller.hpp
tools/acr/: CMakeLists.txt
tools/acr/include/ictk/tools/acr/: exit_codes.hpp  ingest_config.hpp  report.hpp  types.hpp  version.hpp
tools/acr/include_template/: version.hpp.in
tools/acr/src/io/: events_jsonl_reader.hpp  sidecar_semantics.cpp  sidecar_semantics.hpp
tools/acr/src/json/: json_deterministic.hpp
tools/evidence_recorder/: CMakeLists.txt
tools/evidence_recorder/cli/: ctk_record_main.cpp  ictk_record_main.cpp
tools/evidence_recorder/include/ictk/tools/: recorder.hpp
tools/evidence_recorder/schemas/: ictk_metrics.bfbs  ictk_metrics.fbs  ictk_metrics_generated.h
tools/evidence_recorder/src/: env_buildinfo.cpp  env_buildinfo.hpp  hash.cpp  hash.hpp  kpi_calc.cpp  kpi_calc.hpp  recorder_jsonl.cpp  recorder_mcap.cpp
tools/evidence_recorder/tests/: roundtrip_hash_test.cpp  roundtrip_test.cpp  schema_registry_test.cpp  throughput_test.cpp  timebase_test.cpp
