cmake_minimum_required(VERSION 3.22)

## Test utils
add_library(ictk_test_util STATIC
    util/alloc_interposer.cpp
)

target_include_directories(ictk_test_util PUBLIC ${CMAKE_CURRENT_LIST_DIR})
target_link_libraries(ictk_test_util PUBLIC ictk_core)

## apply compiler options and sanitizers
ictk_apply_compiler_options(ictk_test_util)
ictk_apply_sanitizers(ictk_test_util)


## headers compiler smoke
add_executable(test_headers_compile unit/test_headers_compile.cpp)
target_link_libraries(test_headers_compile PRIVATE ictk_core)
ictk_apply_compiler_options(test_headers_compile)
ictk_apply_sanitizers(test_headers_compile)

## property-> Determinism runner + no alloc after start
add_executable(test_determinism_runner 
    property/test_determinism_runner.cpp
    util/dummy_controller.hpp
)
target_link_libraries(test_determinism_runner PRIVATE ictk_core ictk_test_util)
add_test(NAME determinism_runner COMMAND test_determinism_runner)
ictk_apply_compiler_options(test_determinism_runner)
ictk_apply_sanitizers(test_determinism_runner)

## Placeholders
add_executable(test_safety_order property/test_safety_order.cpp)
target_link_libraries(test_safety_order PRIVATE ictk_core)
add_test(NAME safety_order_placeholder COMMAND test_safety_order)
ictk_apply_compiler_options(test_safety_order)

add_executable(test_bumpless_placeholder property/test_bumpless_placeholder.cpp)
target_link_libraries(test_bumpless_placeholder PRIVATE ictk_core)
add_test(NAME bumpless_placeholder COMMAND test_bumpless_placeholder)
ictk_apply_compiler_options(test_bumpless_placeholder)

add_executable(test_saturation_monotonic property/test_saturation_monotonic.cpp)
target_link_libraries(test_saturation_monotonic PRIVATE ictk_core)
ictk_apply_compiler_options(test_saturation_monotonic)
add_test(NAME safety_saturation_monotonic COMMAND test_saturation_monotonic)

add_executable(test_rate_lipschitz property/test_rate_lipschitz.cpp)
target_link_libraries(test_rate_lipschitz PRIVATE ictk_core)
ictk_apply_compiler_options(test_rate_lipschitz)
add_test(NAME safety_rate_lipschitz COMMAND test_rate_lipschitz)

add_executable(test_jerk_lipschitz property/test_jerk_lipschitz.cpp)
target_link_libraries(test_jerk_lipschitz PRIVATE ictk_core)
ictk_apply_compiler_options(test_jerk_lipschitz)
add_test(NAME safety_jerk_lipschitz COMMAND test_jerk_lipschitz)

add_executable(test_bumpless_bound property/test_bumpless_bound.cpp)
target_link_libraries(test_bumpless_bound PRIVATE ictk_core)
ictk_apply_compiler_options(test_bumpless_bound)
add_test(NAME safety_bumpless_bound COMMAND test_bumpless_bound)

add_executable(test_fallback_ramp property/test_fallback_ramp.cpp)
target_link_libraries(test_fallback_ramp PRIVATE ictk_core)
ictk_apply_compiler_options(test_fallback_ramp)
add_test(NAME safety_fallback_ramp COMMAND test_fallback_ramp)


add_executable(test_pid_coeffs tests_pid/unit/pid_coeffs_test.cpp)
target_link_libraries(test_pid_coeffs PRIVATE ictk_core)
ictk_apply_compiler_options(test_pid_coeffs)
add_test(NAME pid_coeffs_test COMMAND test_pid_coeffs)

add_executable(test_pid_aw_modes tests_pid/unit/pid_aw_modes_test.cpp)
target_link_libraries(test_pid_aw_modes PRIVATE ictk_core)
ictk_apply_compiler_options(test_pid_aw_modes)
add_test(NAME pid_aw_modes_test COMMAND test_pid_aw_modes)

add_executable(test_pid_invalid_bits tests_pid/unit/pid_invalid_bits_test.cpp)
target_link_libraries(test_pid_invalid_bits PRIVATE ictk_core)
ictk_apply_compiler_options(test_pid_invalid_bits)
add_test(NAME pid_invalid_bits_test COMMAND test_pid_invalid_bits)


add_executable(test_pid_bumpless tests_pid/property/pid_bumpless_property.cpp)
target_link_libraries(test_pid_bumpless PRIVATE ictk_core)
ictk_apply_compiler_options(test_pid_bumpless)
add_test(NAME pid_bumpless_property COMMAND test_pid_bumpless)

add_executable(test_pid_sched_lipschitz tests_pid/property/pid_scheduling_lipschitz.cpp)
target_link_libraries(test_pid_sched_lipschitz PRIVATE ictk_core)
ictk_apply_compiler_options(test_pid_sched_lipschitz)
add_test(NAME pid_scheduling_lipschitz COMMAND test_pid_sched_lipschitz)

add_executable(test_pid_aw_post_safety tests_pid/property/pid_aw_post_safety.cpp)
target_link_libraries(test_pid_aw_post_safety PRIVATE ictk_core)
ictk_apply_compiler_options(test_pid_aw_post_safety)
add_test(NAME pid_aw_post_safety COMMAND test_pid_aw_post_safety)

add_executable(test_pid_derivative_kick tests_pid/property/pid_derivative_kick.cpp)
target_link_libraries(test_pid_derivative_kick PRIVATE ictk_core)
ictk_apply_compiler_options(test_pid_derivative_kick)
add_test(NAME pid_derivative_kick COMMAND test_pid_derivative_kick)